initial start, java 21+ update - OpenRewrite recepie